; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osMutexCreate.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/platform/psp/extr_psp_osal.c_pte_osMutexCreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pte_osMutexCreate.mutexCtr = internal global i32 0, align 4
@MAX_PSP_UID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"mutex%d\00", align 1
@PTE_OS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pte_osMutexCreate(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [32 x i8], align 16
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @pte_osMutexCreate.mutexCtr, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* @pte_osMutexCreate.mutexCtr, align 4
  %7 = load i32, i32* @MAX_PSP_UID, align 4
  %8 = icmp sgt i32 %5, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* @pte_osMutexCreate.mutexCtr, align 4
  br label %10

10:                                               ; preds = %9, %1
  %11 = getelementptr inbounds [32 x i8], [32 x i8]* %3, i64 0, i64 0
  %12 = load i32, i32* @pte_osMutexCreate.mutexCtr, align 4
  %13 = call i32 @snprintf(i8* %11, i32 32, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = getelementptr inbounds [32 x i8], [32 x i8]* %3, i64 0, i64 0
  %15 = call i32 @sceKernelCreateSema(i8* %14, i32 0, i32 1, i32 1, i32 0)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32*, i32** %2, align 8
  store i32 %16, i32* %17, align 4
  %18 = load i32, i32* @PTE_OS_OK, align 4
  ret i32 %18
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @sceKernelCreateSema(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
